name:                panpipes
version:             0.0.0.1
synopsis:
description:
license:             BSD3
license-file:        LICENSE
author:              Syoudai Yokoyama
maintainer:          quantumcars@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.8


library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  build-depends:        base == 4.5.*
                      , pipes >= 3.1.0
                      , pipes-safe >= 1.0.0
                      , attoparsec >= 0.10.3.0


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test, .
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base == 4.5.*
                      , hspec >= 1.3
                      , QuickCheck
                      , panpipes
                      , bytestring >= 0.9.1.4
                      , pipes >= 3.1.0
                      , pipes-safe >= 1.0.0
                      , attoparsec >= 0.10.3.0
